terraform/2-igw.tf
resource "aws_internet_gateway" "eks-igw" {
  vpc_id = aws_vpc.eks-vpc.id
  tags = {
    Name = "ping-pong-igw"
  }
}
